# histopathologic_cancer_detect

./: .gitignore  README.md  pyproject.toml
data/: conf.toml  data_sources.toml
notebooks/: clusterization_and_views.ipynb  eda.ipynb  ensure_wd.py  extracting_features_with_deeplearning.ipynb  histopathologic_cancer_detection.ipynb
utils/: data_sanity.py  features_extract.py  func.py  load_config.py  models.py  pixels_details.py  pixels_verify.py  plots.py
